--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,71 @@
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="/%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="/%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <link href="./assets/images/favicon.png" rel="shortcut icon">
+    <link href="./assets/plugins/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <link href="./assets/plugins/bootstrap/bootstrap-slider.css" rel="stylesheet">
+    <link href="./assets/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="./assets/plugins/slick/slick.css" rel="stylesheet">
+    <link href="./assets/plugins/slick/slick-theme.css" rel="stylesheet">
+    <link href="./assets/plugins/jquery-nice-select/css/nice-select.css" rel="stylesheet">
+    <script type="text/javascript">
+      var script = document.createElement('script');       
+      script.src = "./assets/plugins/jquery/jquery.min.js";
+      document.head.appendChild(script)
+    </script>
+    <script type="text/javascript">
+      var script = document.createElement('script');       
+      script.src = "./assets/plugins/bootstrap/popper.min.js";
+      document.head.appendChild(script)
+    </script>
+    <script type="text/javascript">
+      var script = document.createElement('script');       
+      script.src = "./assets/plugins/bootstrap/bootstrap.min.js";
+      document.head.appendChild(script)
+    </script>
+    <script type="text/javascript">
+      var script = document.createElement('script');       
+      script.src = "./assets/plugins/bootstrap/bootstrap-slider.js";
+      document.head.appendChild(script)
+    </script>
+    <script type="text/javascript">
+      var script = document.createElement('script');       
+      script.src = "./assets/plugins/tether/js/tether.min.js";
+      document.head.appendChild(script)
+    </script>
+    <script type="text/javascript">
+      var script = document.createElement('script');       
+      script.src = "./assets/plugins/raty/jquery.raty-fa.js";
+      document.head.appendChild(script)
+    </script>
+    <script type="text/javascript">
+      var script = document.createElement('script');       
+      script.src = "./assets/plugins/slick/slick.min.js";
+      document.head.appendChild(script)
+    </script>
+    <script type="text/javascript">
+      var script = document.createElement('script');       
+      script.src = "./assets/plugins/jquery-nice-select/js/jquery.nice-select.min.js";
+      document.head.appendChild(script)
+    </script>
+    <script type="text/javascript">
+      var script = document.createElement('script');       
+      script.src = "https://maps.googleapis.com/maps/api/js?key=AIzaSyCcABaamniA6OL5YvYSpB3pFMNrXwXnLwU";
+      document.head.appendChild(script)
+    </script>
+    <script type="text/javascript">
+      var script = document.createElement('script');       
+      script.src = "./assets/plugins/google-map/map.js";
+      document.head.appendChild(script)
+    </script>
+    <script type="text/javascript">
+      var script = document.createElement('script');       
+      script.src = "./assets/js/script.js";
+      document.head.appendChild(script)
+    </script>  
+    <link href="./assets/css/style.css" rel="stylesheet">
+
+    <title>Keep It Up</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
