Problem User Interface modified

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,13 +7,13 @@
     <link rel="apple-touch-icon" href="/%PUBLIC_URL%/logo192.png" />
     
     <link href="./assets/images/favicon.png" rel="shortcut icon">
-    <link href="./assets/plugins/bootstrap/bootstrap.min.css" rel="stylesheet">
-    <link href="./assets/plugins/bootstrap/bootstrap-slider.css" rel="stylesheet">
-    <link href="./assets/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="./assets/plugins/slick/slick.css" rel="stylesheet">
-    <link href="./assets/plugins/slick/slick-theme.css" rel="stylesheet">
-    <link href="./assets/plugins/jquery-nice-select/css/nice-select.css" rel="stylesheet">
-    <link href="./assets/css/style.css" rel="stylesheet">
+    <link href="/assets/plugins/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/plugins/bootstrap/bootstrap-slider.css" rel="stylesheet">
+    <link href="/assets/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/assets/plugins/slick/slick.css" rel="stylesheet">
+    <link href="/assets/plugins/slick/slick-theme.css" rel="stylesheet">
+    <link href="/assets/plugins/jquery-nice-select/css/nice-select.css" rel="stylesheet">
+    <link href="/assets/css/style.css" rel="stylesheet">
 
     <title>Keep It Up</title>
   </head>
